--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.8",
+    "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router": "^7.2.0",
+    "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
